UI working smooth af: index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Complete Gruve Scheduler App</title>
+      <title>AI-Powered Meeting Assistant UI</title>
     </head>
 
     <body>
